c3prj1_deck/grade.txt
Grading at Tue Jul 16 20:54:06 UTC 2019
Compiling deck.c
Compiling cards.c
cards.c:1:1: error: expected identifier or ‘(’ before ‘.’ token
 ../c2prj1_cards/cards.c
 ^
Could not compile your cards.c!

Overall Grade: FAILED
